--- a/sample.bot.ini
+++ b/sample.bot.ini
@@ -1,4 +1,4 @@
 [pyrogram]
-api_id = 12345
-api_hash = 123897helloworld123u834
-bot_token = 12342432:sdfjashfoiasf
+api_id = 9049867
+api_hash = 972c0f2e94973b5ffa9a89cb34e5671b
+bot_token = 5149412762:AAF1w1IwWC65J5_7Lj5yCs-6iRBhhaP2qvM
